// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderDetails renders MiniPreloader when delivering 1`] = `
<React.Fragment>
  <View
    isFetching={false}
    logout={[MockFunction]}
    showTime={true}
    type="orders"
    user={
      Object {
        "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
        "businessName": "Food Circle",
        "businessPhoneNo": "+2348166557788",
        "email": "food@circle.com",
        "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
        "role": "caterer",
      }
    }
  >
    <React.Fragment>
      <div
        className="main-wrapper"
      >
        <div
          className="order-confirmation order-details"
        >
          <h3
            className="text-center"
            style={
              Object {
                "paddingTop": "1em",
              }
            }
          >
            Order #
            fb097bde-5959-45ff-8e21-51184fa60c25
          </h3>
          <div
            className="text-center"
          >
            <MiniPreloader />
          </div>
        </div>
      </div>
    </React.Fragment>
  </View>
</React.Fragment>
`;

exports[`OrderDetails renders Preloader when fetching 1`] = `
<React.Fragment>
  <View
    isFetching={true}
    logout={[MockFunction]}
    showTime={true}
    type="orders"
    user={
      Object {
        "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
        "businessName": "Food Circle",
        "businessPhoneNo": "+2348166557788",
        "email": "food@circle.com",
        "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
        "role": "caterer",
      }
    }
  >
    <React.Fragment />
  </View>
</React.Fragment>
`;

exports[`OrderDetails renders connected component 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(CatererOrderDetails)
    isFetching={false}
    match={
      Object {
        "params": Object {
          "id": "fb097bde-5959-45ff-8e21-51184fa60c25",
        },
      }
    }
    user={
      Object {
        "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
        "businessName": "Food Circle",
        "businessPhoneNo": "+2348166557788",
        "email": "food@circle.com",
        "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
        "role": "caterer",
      }
    }
  >
    <CatererOrderDetails
      deliverOrder={[Function]}
      delivering={false}
      fetchOrders={[Function]}
      isFetching={false}
      logout={[Function]}
      match={
        Object {
          "params": Object {
            "id": "fb097bde-5959-45ff-8e21-51184fa60c25",
          },
        }
      }
      order={
        Object {
          "createdAt": "2018-04-06T00:47:03.687Z",
          "customer": Object {
            "email": "emiola@olasanmi.com",
            "firstname": "Emiola",
            "lastname": "Olasanmi",
          },
          "deliveryAddress": "4, Church Street, Yaba",
          "deliveryPhoneNo": "+2348134567890",
          "id": "fb097bde-5959-45ff-8e21-51184fa60c25",
          "meals": Array [
            Object {
              "delivered": true,
              "description": "Sharwama contains no animal products, perfect for dieters",
              "id": "36d525d1-efc9-4b75-9999-3e3d8dc64ce3",
              "imageURL": "https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&h=350",
              "price": "1200.00",
              "quantity": 1,
              "title": "Vegetable Sharwama and Guava Smoothie",
              "vegetarian": true,
            },
          ],
          "status": "delivered",
          "updatedAt": "2018-04-06T00:47:03.687Z",
        }
      }
      user={
        Object {
          "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
          "businessName": "Food Circle",
          "businessPhoneNo": "+2348166557788",
          "email": "food@circle.com",
          "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
          "role": "caterer",
        }
      }
    >
      <View
        isFetching={false}
        logout={[Function]}
        showTime={true}
        type="orders"
        user={
          Object {
            "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
            "businessName": "Food Circle",
            "businessPhoneNo": "+2348166557788",
            "email": "food@circle.com",
            "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
            "role": "caterer",
          }
        }
      >
        <div
          className="admin null"
        >
          <Header
            active="orders"
            dateType="orders"
            logout={[Function]}
            showTime={true}
            type="caterer"
            user={
              Object {
                "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
                "businessName": "Food Circle",
                "businessPhoneNo": "+2348166557788",
                "email": "food@circle.com",
                "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                "role": "caterer",
              }
            }
          >
            <div
              className="header"
            >
              <div
                className="navbar"
              >
                <Connect(CatererHeader)
                  dateType="orders"
                  showTime={true}
                >
                  <CatererHeader
                    currentDay="1970-01-01"
                    dateType="orders"
                    showTime={true}
                    toggleSideNav={[Function]}
                  >
                    <div
                      className="menu-control d-none-md"
                    >
                      <Link
                        className="d-none-md"
                        clickHandler={[Function]}
                        id={null}
                      >
                        <button
                          className="link-btn d-none-md"
                          id={null}
                          onClick={[Function]}
                        >
                          <img
                            alt="toggler"
                            src="/img/toggler.png"
                          />
                        </button>
                      </Link>
                    </div>
                    <div
                      className="page-title d-flex-md"
                    >
                      <div
                        className="date"
                      >
                        <h2>
                          Thursday, 1st January 1970
                              
                          00:00
                        </h2>
                      </div>
                    </div>
                  </CatererHeader>
                </Connect(CatererHeader)>
              </div>
            </div>
          </Header>
          <div
            className="content"
          >
            <Connect(SideNav)
              active="orders"
              logout={[Function]}
              user={
                Object {
                  "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
                  "businessName": "Food Circle",
                  "businessPhoneNo": "+2348166557788",
                  "email": "food@circle.com",
                  "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                  "role": "caterer",
                }
              }
            >
              <SideNav
                active="orders"
                logout={[Function]}
                open={false}
                toggleSideNav={[Function]}
                user={
                  Object {
                    "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
                    "businessName": "Food Circle",
                    "businessPhoneNo": "+2348166557788",
                    "email": "food@circle.com",
                    "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                    "role": "caterer",
                  }
                }
              >
                <div
                  className="sidenav null"
                  id="sidenav"
                >
                  <div
                    className="sidenav-content"
                  >
                    <div
                      className="sidenav-header"
                    >
                      <CloseIcon
                        btnID={null}
                        clickHandler={[Function]}
                        divClass="d-none-md"
                      >
                        <div
                          className="close d-none-md"
                        >
                          <Link
                            aria-hidden="true"
                            className={null}
                            clickHandler={[Function]}
                            id={null}
                          >
                            <button
                              className="link-btn null"
                              id={null}
                              onClick={[Function]}
                            >
                              ×
                            </button>
                          </Link>
                        </div>
                      </CloseIcon>
                      <div
                        className="sidenav-title"
                      >
                        <h3>
                          <Link
                            href="/"
                            replace={false}
                            to="/"
                          >
                            <a
                              href="/"
                              onClick={[Function]}
                            >
                              BOOK-A-MEAL
                            </a>
                          </Link>
                        </h3>
                        <div
                          className="username-circle"
                        >
                          <p>
                            F
                          </p>
                        </div>
                        <p>
                          Food Circle
                        </p>
                        <span>
                          <Link
                            className={null}
                            clickHandler={[Function]}
                            id={null}
                          >
                            <button
                              className="link-btn null"
                              id={null}
                              onClick={[Function]}
                            >
                              Logout
                            </button>
                          </Link>
                        </span>
                      </div>
                    </div>
                    <div
                      className="sidenav-body"
                    >
                      <Link
                        className="menu-item false"
                        href="/"
                        replace={false}
                        to="/"
                      >
                        <a
                          className="menu-item false"
                          href="/"
                          onClick={[Function]}
                        >
                          Dashboard
                        </a>
                      </Link>
                      <Link
                        className="menu-item false"
                        href="/meals"
                        replace={false}
                        to="/meals"
                      >
                        <a
                          className="menu-item false"
                          href="/meals"
                          onClick={[Function]}
                        >
                          Meals
                        </a>
                      </Link>
                      <Link
                        className="menu-item false"
                        href="/menu"
                        replace={false}
                        to="/menu"
                      >
                        <a
                          className="menu-item false"
                          href="/menu"
                          onClick={[Function]}
                        >
                          Menu
                        </a>
                      </Link>
                      <Link
                        className="menu-item active"
                        href="/orders"
                        replace={false}
                        to="/orders"
                      >
                        <a
                          className="menu-item active"
                          href="/orders"
                          onClick={[Function]}
                        >
                          Orders
                        </a>
                      </Link>
                    </div>
                  </div>
                </div>
              </SideNav>
            </Connect(SideNav)>
            <div
              className="content-wrapper"
              id="has-modal"
            >
              <div
                className="main-wrapper"
              >
                <div
                  className="order-confirmation order-details"
                >
                  <h3
                    className="text-center"
                    style={
                      Object {
                        "paddingTop": "1em",
                      }
                    }
                  >
                    Order #
                    fb097bde-5959-45ff-8e21-51184fa60c25
                  </h3>
                  <div
                    className="order-misc"
                  >
                    <p
                      className="order-date"
                    >
                      Order Date: 
                      18/04/06 12:47
                    </p>
                    <p>
                      Status: 
                      <span
                        className="success"
                      >
                        Delivered
                      </span>
                    </p>
                    <p>
                      Customer: 
                      Emiola Olasanmi
                    </p>
                    <p>
                      Address Provided: 
                      4, Church Street, Yaba
                    </p>
                    <p>
                      Number Provided: 
                      +2348134567890
                    </p>
                  </div>
                  <div
                    className="order-summary"
                  >
                    <div
                      key="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
                    >
                      <p>
                        1
                        x
                      </p>
                      <p>
                        Vegetable Sharwama and Guava Smoothie
                      </p>
                      <p>
                        ₦
                        1200.00
                      </p>
                    </div>
                  </div>
                  <div
                    className="order-amount admin-order-total"
                  >
                    <div>
                      <p>
                        Total
                      </p>
                      <h2>
                        ₦
                        1200
                      </h2>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <Footer>
            <div
              className="footer"
            >
              <p>
                © 2018. Iveren Shaguy. All images were gotten from Google and are not mine.
              </p>
            </div>
          </Footer>
        </div>
      </View>
    </CatererOrderDetails>
  </Connect(CatererOrderDetails)>
</Provider>
`;

exports[`OrderDetails renders correctly when not fetching 1`] = `
<React.Fragment>
  <View
    isFetching={false}
    logout={[MockFunction]}
    showTime={true}
    type="orders"
    user={
      Object {
        "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
        "businessName": "Food Circle",
        "businessPhoneNo": "+2348166557788",
        "email": "food@circle.com",
        "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
        "role": "caterer",
      }
    }
  >
    <React.Fragment>
      <div
        className="main-wrapper"
      >
        <div
          className="order-confirmation order-details"
        >
          <h3
            className="text-center"
            style={
              Object {
                "paddingTop": "1em",
              }
            }
          >
            Order #
            fb097bde-5959-45ff-8e21-51184fa60c25
          </h3>
          <React.Fragment>
            <div
              className="order-misc"
            >
              <p
                className="order-date"
              >
                Order Date: 
                18/04/06 12:47
              </p>
              <p>
                Status: 
                <span
                  className="success"
                >
                  Delivered
                </span>
              </p>
              <p>
                Customer: 
                Emiola Olasanmi
              </p>
              <p>
                Address Provided: 
                4, Church Street, Yaba
              </p>
              <p>
                Number Provided: 
                +2348134567890
              </p>
            </div>
            <div
              className="order-summary"
            >
              <div
                key="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
              >
                <p>
                  1
                  x
                </p>
                <p>
                  Vegetable Sharwama and Guava Smoothie
                </p>
                <p>
                  ₦
                  1200.00
                </p>
              </div>
            </div>
            <div
              className="order-amount admin-order-total"
            >
              <div>
                <p>
                  Total
                </p>
                <h2>
                  ₦
                  1200
                </h2>
              </div>
            </div>
          </React.Fragment>
        </div>
      </div>
    </React.Fragment>
  </View>
</React.Fragment>
`;

exports[`OrderDetails renders message when not fetching and that order doesn't exist 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(CatererOrderDetails)
    isFetching={false}
    match={
      Object {
        "params": Object {
          "id": "fb097bde-5959-45ff",
        },
      }
    }
    user={
      Object {
        "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
        "businessName": "Food Circle",
        "businessPhoneNo": "+2348166557788",
        "email": "food@circle.com",
        "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
        "role": "caterer",
      }
    }
  >
    <CatererOrderDetails
      deliverOrder={[Function]}
      delivering={false}
      fetchOrders={[Function]}
      isFetching={false}
      logout={[Function]}
      match={
        Object {
          "params": Object {
            "id": "fb097bde-5959-45ff",
          },
        }
      }
      order={null}
      user={
        Object {
          "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
          "businessName": "Food Circle",
          "businessPhoneNo": "+2348166557788",
          "email": "food@circle.com",
          "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
          "role": "caterer",
        }
      }
    >
      <View
        isFetching={false}
        logout={[Function]}
        showTime={true}
        type="orders"
        user={
          Object {
            "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
            "businessName": "Food Circle",
            "businessPhoneNo": "+2348166557788",
            "email": "food@circle.com",
            "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
            "role": "caterer",
          }
        }
      >
        <div
          className="admin null"
        >
          <Header
            active="orders"
            dateType="orders"
            logout={[Function]}
            showTime={true}
            type="caterer"
            user={
              Object {
                "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
                "businessName": "Food Circle",
                "businessPhoneNo": "+2348166557788",
                "email": "food@circle.com",
                "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                "role": "caterer",
              }
            }
          >
            <div
              className="header"
            >
              <div
                className="navbar"
              >
                <Connect(CatererHeader)
                  dateType="orders"
                  showTime={true}
                >
                  <CatererHeader
                    currentDay="1970-01-01"
                    dateType="orders"
                    showTime={true}
                    toggleSideNav={[Function]}
                  >
                    <div
                      className="menu-control d-none-md"
                    >
                      <Link
                        className="d-none-md"
                        clickHandler={[Function]}
                        id={null}
                      >
                        <button
                          className="link-btn d-none-md"
                          id={null}
                          onClick={[Function]}
                        >
                          <img
                            alt="toggler"
                            src="/img/toggler.png"
                          />
                        </button>
                      </Link>
                    </div>
                    <div
                      className="page-title d-flex-md"
                    >
                      <div
                        className="date"
                      >
                        <h2>
                          Thursday, 1st January 1970
                              
                          00:00
                        </h2>
                      </div>
                    </div>
                  </CatererHeader>
                </Connect(CatererHeader)>
              </div>
            </div>
          </Header>
          <div
            className="content"
          >
            <Connect(SideNav)
              active="orders"
              logout={[Function]}
              user={
                Object {
                  "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
                  "businessName": "Food Circle",
                  "businessPhoneNo": "+2348166557788",
                  "email": "food@circle.com",
                  "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                  "role": "caterer",
                }
              }
            >
              <SideNav
                active="orders"
                logout={[Function]}
                open={false}
                toggleSideNav={[Function]}
                user={
                  Object {
                    "businessAddress": "$, Herbert Macaulay Way, Yaba, Lagos",
                    "businessName": "Food Circle",
                    "businessPhoneNo": "+2348166557788",
                    "email": "food@circle.com",
                    "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                    "role": "caterer",
                  }
                }
              >
                <div
                  className="sidenav null"
                  id="sidenav"
                >
                  <div
                    className="sidenav-content"
                  >
                    <div
                      className="sidenav-header"
                    >
                      <CloseIcon
                        btnID={null}
                        clickHandler={[Function]}
                        divClass="d-none-md"
                      >
                        <div
                          className="close d-none-md"
                        >
                          <Link
                            aria-hidden="true"
                            className={null}
                            clickHandler={[Function]}
                            id={null}
                          >
                            <button
                              className="link-btn null"
                              id={null}
                              onClick={[Function]}
                            >
                              ×
                            </button>
                          </Link>
                        </div>
                      </CloseIcon>
                      <div
                        className="sidenav-title"
                      >
                        <h3>
                          <Link
                            href="/"
                            replace={false}
                            to="/"
                          >
                            <a
                              href="/"
                              onClick={[Function]}
                            >
                              BOOK-A-MEAL
                            </a>
                          </Link>
                        </h3>
                        <div
                          className="username-circle"
                        >
                          <p>
                            F
                          </p>
                        </div>
                        <p>
                          Food Circle
                        </p>
                        <span>
                          <Link
                            className={null}
                            clickHandler={[Function]}
                            id={null}
                          >
                            <button
                              className="link-btn null"
                              id={null}
                              onClick={[Function]}
                            >
                              Logout
                            </button>
                          </Link>
                        </span>
                      </div>
                    </div>
                    <div
                      className="sidenav-body"
                    >
                      <Link
                        className="menu-item false"
                        href="/"
                        replace={false}
                        to="/"
                      >
                        <a
                          className="menu-item false"
                          href="/"
                          onClick={[Function]}
                        >
                          Dashboard
                        </a>
                      </Link>
                      <Link
                        className="menu-item false"
                        href="/meals"
                        replace={false}
                        to="/meals"
                      >
                        <a
                          className="menu-item false"
                          href="/meals"
                          onClick={[Function]}
                        >
                          Meals
                        </a>
                      </Link>
                      <Link
                        className="menu-item false"
                        href="/menu"
                        replace={false}
                        to="/menu"
                      >
                        <a
                          className="menu-item false"
                          href="/menu"
                          onClick={[Function]}
                        >
                          Menu
                        </a>
                      </Link>
                      <Link
                        className="menu-item active"
                        href="/orders"
                        replace={false}
                        to="/orders"
                      >
                        <a
                          className="menu-item active"
                          href="/orders"
                          onClick={[Function]}
                        >
                          Orders
                        </a>
                      </Link>
                    </div>
                  </div>
                </div>
              </SideNav>
            </Connect(SideNav)>
            <div
              className="content-wrapper"
              id="has-modal"
            >
              <p
                className="text-center"
              >
                This Order Does Not Exist
              </p>
            </div>
          </div>
          <Footer>
            <div
              className="footer"
            >
              <p>
                © 2018. Iveren Shaguy. All images were gotten from Google and are not mine.
              </p>
            </div>
          </Footer>
        </div>
      </View>
    </CatererOrderDetails>
  </Connect(CatererOrderDetails)>
</Provider>
`;
